# RustyImageTools.github.io

./: Cargo.toml  README.md  index.html  manifest.json  rust_image_resizer.js  rust_image_resizer_bg.wasm
js/: app.js  fileHandlers.js  imageProcessing.js  service-worker.js  ui.js
pkg/: README.md  package.json  rust_image_resizer.d.ts  rust_image_resizer_bg.wasm.d.ts
